# goel

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml  webdriver.yml
src/: App.tsx  index.tsx  styles.css
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  default-config.toml.old  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-12-30-184530_create_goals/: up.sql
src-tauri/migrations/2024-01-03-095418_create_goal_ratings/: down.sql  up.sql
src-tauri/migrations/2024-01-03-095418_create_goal_reflections/: up.sql
src-tauri/src/: commands.rs  config.rs  db.rs  main.rs
src-tauri/src/db/: models.rs  schema.rs
src-tauri/tests/: config.rs  os.rs
src/components/: ActionModal.tsx  AddGoalModal.tsx  Button.tsx  ButtonPrimary.tsx  EditGoalModal.tsx  EvaIcon.tsx  Goal.tsx  GoalReflectForm.tsx  GoalsView.tsx  Header.tsx  InfoBar.tsx  InfoModal.tsx  Modal.tsx  NumberInput.tsx  RatingSlider.tsx  SelectInput.tsx  Switch.tsx  TextInput.tsx  TextareaInput.tsx  TimePicker.tsx
src/components/partial/: GoalForm.tsx
src/routes/: GoalsView.tsx
src/store/: fontSize.ts  goals.ts  settings.ts
src/types/: Goal.ts  GoalReflectionRecord.ts
src/views/: GoalDetails.tsx  GoalsView.tsx  RemindView.tsx  SettingsView.tsx  TrackProgressView.tsx  TrashView.tsx
webdriver/selenium/: package-lock.json  package.json
webdriver/selenium/test/: test.mjs
webdriver/webdriverio/: package-lock.json  package.json  wdio.conf.mjs
webdriver/webdriverio/test/specs/: test.e2e.mjs
