[package]
name = "goel"
version = "0.0.0"
description = "A Tauri App"
authors = ["Jacob Mellin"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.1", features = ["notification-all", "window-hide", "system-tray", "window-start-dragging", "process-exit", "shell-open", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.2"
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
uuid = "1.6.1"
chrono = { version = "0.4.31", features = ["serde"] }
confy = "0.5.1"
platform-dirs = "0.3.0"
diesel_migrations = "2.1.0"
serde_repr = "0.1.18"
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
tokio = { version = "1.35.1", features = ["time", "macros", "rt-multi-thread"] }
libsqlite3-sys = { version = ">=0.17.2, <0.28.0", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "goel"
path = "src/lib.rs"
